# wellArchitectureDesign

./: .gitignore  LICENSE  README.md  elements.py  execute.py  main.py  pyproject.toml  setup.py  well.py
.github/workflows/: python-publish.yml
wellarchitecturedesign/: __init__.py  _version.py  well.py
